--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@league_ml/component-library.ui.button": "0.0.1",
+    "@urql/exchange-graphcache": "^4.3.6",
+    "@urql/exchange-retry": "^0.3.2",
+    "graphql": "^16.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "urql": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
