--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@league.ml/component-library": "1.0.2",
+    "@league.ml/component-library": "^1.0.6",
     "@urql/exchange-graphcache": "^4.3.6",
     "@urql/exchange-retry": "^0.3.2",
     "graphql": "^16.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "sharp": "^0.30.3",
     "urql": "^2.2.0"
   },
