--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@league.ml/component-library": "^1.0.6",
+    "@league.ml/component-library": "^1.0.8",
     "@urql/exchange-graphcache": "^4.3.6",
     "@urql/exchange-retry": "^0.3.2",
     "graphql": "^16.3.0",
@@ -25,6 +25,7 @@
     "@types/react": "17.0.40",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "4.6.2"
   }
 }
