--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "refresh-schema": "node refresh-schema.mjs"
   },
   "dependencies": {
-    "@league.ml/component-library": "^1.0.23",
+    "@league.ml/component-library": "1.0.17",
     "@urql/exchange-graphcache": "^4.3.6",
     "@urql/exchange-retry": "^0.3.2",
     "@urql/introspection": "^0.3.2",
