--- a/package.json
+++ b/package.json
@@ -3,31 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "pnpm run relay && next dev",
+    "build": "pnpm run relay && next build",
     "start": "next start",
     "lint": "next lint",
-    "refresh-schema": "node refresh-schema.mjs"
+    "refresh-schema": "get-graphql-schema https://api.league.ml/ > ./relay-stuff/schema.graphql",
+    "relay": "relay-compiler"
   },
   "dependencies": {
-    "@league.ml/component-library": "1.0.17",
-    "@urql/exchange-graphcache": "^4.3.6",
-    "@urql/exchange-retry": "^0.3.2",
-    "@urql/introspection": "^0.3.2",
-    "graphql": "^16.3.0",
-    "next": "12.1.0",
+    "@league.ml/component-library": "1.0.18",
+    "next": "12.1.1-canary.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "sharp": "^0.30.3",
-    "urql": "^2.2.0"
+    "react-relay": "^13.2.0",
+    "relay-nextjs": "^0.8.0",
+    "relay-runtime": "^13.2.0",
+    "sharp": "^0.30.3"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/react-relay": "^13.0.1",
+    "@types/relay-runtime": "^13.0.2",
+    "babel-plugin-relay": "^13.2.0",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "get-graphql-schema": "^2.1.2",
+    "graphql": "^16.3.0",
     "node-fetch": "^3.2.3",
+    "relay-compiler": "^13.2.0",
+    "relay-compiler-language-typescript": "^15.0.1",
     "typescript": "4.6.2"
   }
 }
