--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "start": "cross-env NODE_ENV=production npm run dev:wrangler"
   },
   "dependencies": {
+    "@league.ml/component-library": "^1.0.24",
     "@remix-run/cloudflare-pages": "^1.3.2",
     "@remix-run/react": "^1.3.2",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "remix": "^1.3.2"
   },
   "devDependencies": {
