--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "remix": "^1.3.2"
+    "remix": "^1.3.2",
+    "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.2.0",
