--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@remix-run/cloudflare-pages": "^1.3.2",
     "@remix-run/react": "^1.3.2",
     "cross-env": "^7.0.3",
+    "rand-seed": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-keyed-flatten-children": "^1.3.0",
     "remix": "^1.3.2",
     "tiny-invariant": "^1.2.0"
   },
